--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,64 @@
 body {
     background-color: #111111;
 }
+.number-container {
+    margin: 100px;
+    width: 100px;
+    height: 200px;
+    background-color: #555555;
+}
+.number-horizontal-section {
+    width: 80px;
+    height: 10px;
+    background-color: #FEFEFE;
+    position: relative;
+    margin: auto auto; 
+}
+.number-horizontal-section::before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    left: -5px;
+    border-right: 5px solid #FEFEFE;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+}
+.number-horizontal-section::after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    right: -5px;
+    border-left: 5px solid #FEFEFE;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+}
+.number-vertical-section {
+    width: 10px;
+    height: 80px;
+    background-color: #FEFEFE;
+    position: relative;
+    margin: auto auto;
+    margin-top: 20px;
+}
+.number-vertical-section::before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: -5px;
+    border-bottom: 5px solid #FEFEFE;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
+.number-vertical-section::after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: -5px;
+    border-top: 5px solid #FEFEFE;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
