--- a/style/style.css
+++ b/style/style.css
@@ -8,13 +8,13 @@ body {
     background-color: #111111;
     position: relative;
 }
-.digit__section-h {
+.digit__section {
     width: 80px;
     height: 10px;
     background-color: #333333;
     position: relative;
 }
-.digit__section-h::before {
+.digit__section::before {
     content: "";
     width: 0;
     height: 0;
@@ -24,7 +24,7 @@ body {
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
 }
-.digit__section-h::after {
+.digit__section::after {
     content: "";
     width: 0;
     height: 0;
@@ -34,31 +34,8 @@ body {
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
 }
-.digit__section-v {
-    width: 10px;
-    height: 80px;
-    background-color: #333333;
-    position: relative;
-}
-.digit__section-v::before {
-    content: "";
-    width: 0;
-    height: 0;
-    position: absolute;
-    top: -5px;
-    border-bottom: 5px solid #333333;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-}
-.digit__section-v::after {
-    content: "";
-    width: 0;
-    height: 0;
-    position: absolute;
-    bottom: -5px;
-    border-top: 5px solid #333333;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
+.digit__section--vertical {
+    transform: rotate(90deg);
 }
 .digit__section-top {
     position: absolute;
@@ -67,13 +44,13 @@ body {
 }
 .digit__section-top-left {
     position: absolute;
-    top: 12px;
-    left: 0px;
+    top: 47px;
+    left: -35px;
 }
 .digit__section-top-right {
     position: absolute;
-    top: 12px;
-    right: 0px;
+    top: 47px;
+    right: -35px;
 }
 .digit__section-center {
     position: absolute;
@@ -82,37 +59,26 @@ body {
 }
 .digit__section-bottom-left {
     position: absolute;
-    bottom: 12px;
-    left: 0px;
+    bottom: 47px;
+    left: -35px;
 }
 .digit__section-bottom-right {
     position: absolute;
-    bottom: 12px;
-    right: 0px;
+    bottom: 47px;
+    right: -35px;
 }
 .digit__section-bottom {
     position: absolute;
     bottom: 0px;
     left: 12px;
 }
-.digit__section-h--active{
+.digit__section--active{
     background-color: #00BFFF;
     box-shadow: 0px 0px 5px #00BFFF;
 }
-.digit__section-h--active::before {
+.digit__section--active::before {
     border-right: 5px solid #00BFFF;
 }
-.digit__section-h--active::after {
+.digit__section--active::after {
     border-left: 5px solid #00BFFF;
 }
-.digit__section-v--active{
-    background-color: #00BFFF;
-    box-shadow: 0px 0px 5px #00BFFF;
-}
-.digit__section-v--active::before {
-    border-bottom: 5px solid #00BFFF;
-}
-.digit__section-v--active::after {
-    border-top: 5px solid #00BFFF;
-}
-
