--- a/style/style.css
+++ b/style/style.css
@@ -87,3 +87,19 @@ body {
 .digit__section--active::after {
     border-left: 5px solid #00BFFF;
 }
+.dots {
+    height: 198px;
+    width: 15px;
+    background-color: #111111;
+    margin: 15px;
+}
+.dot {
+    height: 15px;
+    width: 15px;
+    background-color: #111111;
+    margin: 57px 0px;
+}
+.dot--active {
+    background-color: #00BFFF;
+    box-shadow: 0px 0px 5px #00BFFF;
+}
