--- a/style/style.css
+++ b/style/style.css
@@ -88,16 +88,16 @@ body {
     border-left: 5px solid #00BFFF;
 }
 .dots {
-    height: 198px;
-    width: 15px;
+    display: flex;
+    flex-direction: column;
     background-color: #111111;
+    justify-content: space-around;
     margin: 15px;
 }
 .dot {
     height: 15px;
     width: 15px;
     background-color: #111111;
-    margin: 57px 0px;
 }
 .dot--active {
     background-color: #00BFFF;
